--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0055)https://www.wysiwygwebbuilder.com/support/timeline.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<title>Bitácora TICs</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="estilos.css" rel="stylesheet">
-<link rel="stylesheet" href="all.css">
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sumar dos números - PWA</title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
    <div id="wb_indexLayoutGrid2">
