--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sumar dos números - PWA</title>
+    <title>Bitácora TICs - Gabriel Bregante</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="manifest" href="manifest.json">
 </head>
