--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitácora TICs - Gabriel Bregante</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="bitacora/estilos.css">
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
